--- a/server/package.json
+++ b/server/package.json
@@ -2,11 +2,10 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "src/server.js",
+  "main": "src/index.js",
   "scripts": {
-    "build": "NODE_ENV=development webpack --config webpack.js --mode=development -w",
-    "start": "node ./server-build/server.js",
-    "dev": "nodemon src/server.js"
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js"
   },
   "keywords": [],
   "author": "",
@@ -20,26 +19,18 @@
     "ignore-styles": "^5.0.1",
     "morgan": "^1.10.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "regenerator-runtime": "^0.13.9"
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.10.4",
-    "@babel/plugin-syntax-jsx": "^7.14.5",
     "@babel/preset-env": "^7.15.8",
     "@babel/preset-react": "^7.14.5",
     "@babel/register": "^7.15.3",
     "babel-loader": "^8.1.0",
-    "babel-plugin-css-modules-transform": "^1.6.2",
-    "babel-plugin-dynamic-import-node": "^2.3.3",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "babel-register": "^6.26.0",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.25.2",
-    "nodemon": "^2.0.13",
-    "webpack": "^4.42.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-node-externals": "^1.7.2"
+    "nodemon": "^2.0.13"
   }
 }
